# docs/swagger.yaml
@@ -44,9 +44,9 @@ paths:
       summary: Create a notification, destination which can be different, for this endpoint will be SMS
       description: This endpoint will send an SMS for an especific NUMBER
       parameters:
-        - name: email
+        - name: number
           in: query
-          description: The email
+          description: The number
           required: true
           type: string
         - name: message
@@ -55,7 +55,7 @@ paths:
           required: true
           type: string
       tags:
-        - Transactions
+        - Notifications
       responses:
         200:
           description: Current state
@@ -79,7 +79,7 @@ paths:
           required: true
           type: string
       tags:
-        - Transactions
+        - Notifications
       responses:
         200:
           description: Current state
